--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -7,6 +7,7 @@
 header{
     background-color: #306BB3;
     display:flex;
+    justify-content: space-between;
 }
 ul{
     display: flex;
@@ -15,6 +16,7 @@ ul{
 
 section{
     display: flex;
+    justify-content: space-between;
 }
 footer{
     display: flex;
